<resources>
    <string name="msg_error_field_mandatory">Campo obrigatório</string>
    <string name="msg_invalid_cpf">CPF inválido</string>
    <string name="msg_invalid_cnpj">CNPJ inválido</string>
    <string name="msg_invalid_cellphone">Celular inválido</string>
    <string name="msg_invalid_phone">Telefone inválido</string>
    <string name="msg_invalid_zipcode">CEP inválido</string>
    <string name="msg_min_length">O campo deve conter %d digitos</string>
    <string name="msg_range_length">O campo deve conter entre %d e %d caracteres</string>
    <string name="msg_range_length_digit">O campo deve conter entre %d e %d digitos</string>
    <string name="msg_invalid_date">Data inválida</string>
    <string name="msg_complete_name">Inserir nome completo</string>
    <string name="msg_name_invalid">O nome não pode conter caracter especial ou numeral</string>
    <string name="msg_name_ignore_number_invalid">O nome não pode conter caracter especial</string>
    <string name="msg_invalid_date_big_today">Data maior que a data atual</string>
    <string name="msg_invalid_date_majority">É necessário que seja maior de idade</string>
    <string name="msg_invalid_email">E-mail inválido</string>
    <string name="msg_invalid_value">Valor inferior ao mínimo permitido</string>
    <string name="msg_invalid_url">Não é uma url válida</string>

    <string name="app_name">School Mate</string>
    <string name="empty" />
    <string name="access_account">Acessar conta</string>
    <string name="fill_your_email_here">Digite seu email</string>
    <string name="fill_your_password">Digite sua senha</string>
    <string name="enter">Entrar</string>
    <string name="create_account">Criar conta</string>
    <string name="save_login">Salvar login</string>
    <string name="forgot_my_password">Esqueci minha senha</string>
    <string name="recovery_login">Recuperar senha</string>
    <string name="info_link_send_forgot">Um link de recuperação de senha será enviado para o e-mail cadastrado:</string>
    <string name="send_link">Enviar link</string>
    <string name="cancel">Cancelar</string>
    <string name="create_your_account">Crie sua conta</string>
    <string name="complete_name">Nome completo</string>
    <string name="email">Email</string>
    <string name="create_an_password">Crie uma senha</string>
    <string name="confirm_an_password">Confirme sua senha</string>
    <string name="logoff">Finalizar sessão</string>
    <string name="disciplines">Disciplinas</string>
    <string name="discipline">Disciplina</string>
    <string name="job_type">Tipo de atividade</string>
    <string name="agenda">Agenda</string>
    <string name="files">Arquivos</string>
    <string name="menu">menu</string>
    <string name="view_calendar">Visualizar calendário</string>
    <string name="add_discipline">Adicionar disciplina</string>
    <string name="edit_discipline">Editar disciplina</string>
    <string name="add_job">Adicionar atividade</string>
    <string name="edit_job">Editar atividade</string>
    <string name="edit_job_complete">Atividade realizada</string>
    <string name="add_file">Adicionar arquivo</string>
    <string name="edit_file">Editar arquivo</string>
    <string name="message_no_discipline">Você ainda não cadastrou suas disciplinas</string>
    <string name="discipline_name">Nome da disciplina</string>
    <string name="teacher_name">Nome do professor</string>
    <string name="discipline_icon">Defina um emoji para a disciplina</string>
    <string name="save_discipline">Salvar disciplina</string>
    <string name="save_job">Salvar atividade</string>
    <string name="edit">Editar</string>
    <string name="delete">Excluir</string>
    <string name="see_details">Ver detalhes</string>
    <string name="warning">Atenção</string>
    <string name="confirm_delete_discipline">Realmente deseja excluir a disciplina %s?</string>
    <string name="confirm_delete_job">Realmente deseja excluir a atividade %s?</string>
    <string name="confirm_delete_file">Realmente deseja excluir o arquivo %s?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="jobs">Atividades</string>
    <string name="message_no_jobs_for_discipline">Nenhuma atividade para essa disciplina</string>
    <string name="message_no_files">Você ainda não tem arquivos</string>
    <string name="job_delivery_date">Data de entrega</string>
    <string name="describe_more_detalhes_from_job">Descreva mais detalhes da atividade</string>
    <string name="observation">Observações</string>
    <string name="search">Pesquisar</string>
    <string name="test">Avaliação</string>
    <string name="home_work">Tarefa</string>
    <string name="job">Trabalho</string>
    <string name="choose_your_type_job">Escolha o tipo de atividade</string>
    <string name="apply">Aplicar</string>
    <string name="choose_dt_delivery">Defina a data de entrega</string>
    <string name="choose_dt_agenda">Escolha o dia da agenda</string>
    <string name="select_your_file">Selecione seu arquivo</string>
    <string name="extensions_allowed">Extensões permitidas: PDF, JPG, PNG, DOC, XLS, PPT e TXT</string>
    <string name="max_size_file">Tamanho máximo 10 MB</string>
    <string name="uploading_file">Subindo arquivo</string>
    <string name="error_to_upload_file">Não foi possível subir o arquivo</string>
    <string name="try_again">Tentar novamente</string>
    <string name="title">Título</string>
    <string name="filled_a_title_for_file">Informe um título ao arquivo</string>
    <string name="describe_more_details_about_file">Descreva mais detalhes sobre o arquivo</string>
    <string name="save_file">Salvar arquivo</string>
    <string name="url_invalid_try_download">Fazendo download do arquivo, pois não foi possível abri-lo diretamente.</string>
    <string name="config">Configurações</string>
    <string name="should_receive_notifications_app">Deseja receber notificações de atividades</string>
    <string name="wanna_receive_notification_homework">Quero receber uma notificação de uma tarefa em aberto</string>
    <string name="wanna_receive_notification_job">Quero receber uma notificação de um trabalho em aberto</string>
    <string name="wanna_receive_notification_test">Quero receber uma notificação de uma avaliação em aberto</string>
    <string name="days_before_your_delivery">dias antes de sua entrega.</string>
    <string name="anyone_job">Nenhuma atividade na agenda</string>
    <string name="today">Hoje</string>
    <string name="nothing_for_today">Nenhuma entrega pra hoje!</string>
    <string name="enjoy_your_life">Aproveite para fazer outras tarefas ;)</string>
    <string name="next_jobs">Próximas atividades</string>
</resources>