<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/tv_title"
            style="@style/Theme.SchoolMate.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/choose_your_type_job"
            android:textColor="@color/defaultText"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/iv_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close"
            tools:tint="@color/colorPrimary" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cv_home_work"
            android:layout_width="120dp"
            android:layout_marginTop="32dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            android:text="@string/home_work"
            android:textSize="14sp"
            android:textColor="@color/text_homework"
            android:backgroundTint="@color/back_homework"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/cv_job"
            android:layout_width="120dp"
            android:layout_marginTop="32dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@id/cv_home_work"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            android:text="@string/job"
            android:textSize="14sp"
            android:textColor="@color/text_job"
            android:backgroundTint="@color/back_job"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/cv_test"
            android:layout_marginTop="32dp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cv_job"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            android:text="@string/test"
            android:textSize="14sp"
            android:textColor="@color/text_test"
            android:backgroundTint="@color/back_test"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>