<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.fsacchi.schoolmate.validator.InputType" />
        <import type="com.fsacchi.schoolmate.core.extensions.DateMasks" />

        <variable
            name="item"
            type="com.fsacchi.schoolmate.data.model.job.JobModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_card"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="16dp"
            app:layout_constraintStart_toEndOf="@id/tv_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/Theme.SchoolMate.Title"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/iv_close"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toTopOf="@id/iv_close"
            android:text="@string/add_job" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_discipline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/discipline"
            app:endIconDrawable="@drawable/ic_expanded_more"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:placeholderText="@string/discipline"
            app:validate_empty="@{InputType.Empty}">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none"
                android:text="@={item.nameDiscipline}"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_job_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/job_type"
            app:endIconDrawable="@drawable/ic_expanded_more"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/til_discipline"
            app:placeholderText="@string/job_type"
            app:validate_empty="@{InputType.Empty}">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none"
                android:text="@={item.descrTypeJob}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_date_delivery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:endIconDrawable="@drawable/ic_calendar"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/til_job_type"
            tools:endIconTint="@color/colorPrimary"
            app:validate_date="@{DateMasks.appFormat}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_date_delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/job_delivery_date"
                android:inputType="none"
                android:text="@{item.date()}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_observation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:placeholderText="@string/describe_more_detalhes_from_job"
            android:hint="@string/observation"
            app:layout_constraintTop_toBottomOf="@id/til_date_delivery"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:validate_empty="@{InputType.Empty}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_observation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hintColor"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences|textMultiLine"
                android:lines="6"
                android:maxLines="10"
                android:minLines="3"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:text="@={item.observation}"
                app:layout_constraintTop_toBottomOf="@id/til_date_delivery"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                tools:text="@tools:sample/lorem/random"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save_job"
            style="@style/Theme.SchoolMate.Button"
            android:text="@string/save_job"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:enabled="false"
            android:layout_width="0dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_observation"
            app:layout_constraintVertical_bias="1" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>